# sls_project

./: .gitignore  CITATION.cff  LICENSE  README.md  notes.md  pyproject.toml
slsparser/: __init__.py  pathls.py  shapels.py  utilities.py
test/: pathls_test.py  shapels_test.py
tests/: pathls_test.py  shapels_test.py  utilities_test.py
tests/sls_testfiles/: path_strange.ttl  shape_ideqdisj.ttl  shape_tests.ttl
